# m8c

./: CMakeLists.txt
spike/: sdl2_hello.c
src/: SDL2_inprint.h  command.c  config.c  events.c  events.h  fx_cube.c  fx_cube.h  gamepads.c  inprint2.c  input.c  input.h  log_overlay.c  log_overlay.h  m8c_sdl.h  m8c_sdl_compat.c  m8c_sdl_compat.h  main.c  render.c  settings.c  settings.h
src/backends/: audio_libusb.c  audio_sdl.c  audio_sdl2.c  m8_libserialport.c  m8_libusb.c  m8_rtmidi.c  queue.c  queue.h  ringbuffer.c
